--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,2 +1,6 @@
 // @import "./spark/spark";
-@import "./../../vendor/laravel/spark-aurelius/resources/assets/sass/spark";
+// @import "./../../vendor/laravel/spark-aurelius/resources/assets/sass/spark";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
