--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11365,6 +11365,12 @@ video {
   z-index: auto;
 }
 
+.date-grid,
+.day-of-week {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
