--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,3 +4,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.date-grid,
+.day-of-week {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+}
